--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#e50914</color>
     <color name="grey">#333</color>
+    <color name="grey_palabras">#6e706e</color>
+    <color name="blue">#026efa</color>
 </resources>
