--- a/app/src/main/res/drawable/boton_redondeado.xml
+++ b/app/src/main/res/drawable/boton_redondeado.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10dp"
-    android:shape="rectangle">
-    <solid android:color="@color/red" />
-    <corners android:radius="10dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="#ffffff"/>
+
+
+    <stroke android:width="1dp"
+        android:color="@color/black"
+        />
+
+
+    <padding android:left="1dp"
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="1dp"/>
+
 </shape>
