--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:hint="Correo electrónico o número de teléfono"
             android:inputType="textPersonName"
             android:paddingStart="20dp"
+            android:textColor="@color/white"
             android:textColorHint="@color/white" />
 
         <EditText
@@ -52,6 +53,7 @@
             android:hint="Contraseña"
             android:inputType="textPassword"
             android:paddingStart="20dp"
+            android:textColor="@color/white"
             android:textColorHint="@color/white" />
 
         <Button
@@ -59,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/boton_redondeado"
+            android:background="@drawable/boto_redondo"
             android:text="Iniciar sesión"
             android:textColor="@color/white" />
 
@@ -74,11 +76,12 @@
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/radioButton2"
+                    android:id="@+id/recordar"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
+                    android:buttonTint="@color/grey_palabras"
                     android:text="Recuérdame"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey_palabras"
                     android:textSize="12sp" />
             </TableRow>
 
@@ -87,13 +90,13 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/ayuda"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="160dp"
+                    android:layout_marginStart="150dp"
                     android:layout_marginTop="5dp"
                     android:text="¿Necesitas ayuda?"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey_palabras"
                     android:textSize="12sp" />
             </TableRow>
         </LinearLayout>
@@ -110,11 +113,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="¿Todavía sin Netflix?"
-                android:textColor="@color/white" />
+                android:textColor="@color/grey_palabras" />
 
             <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
+                android:id="@+id/subscribirse"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Suscríbete ya        "
@@ -126,10 +129,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Esta página utiliza Google reCAPTCHA para garantizar que no"
-            android:textColor="@color/white" />
+            android:textColor="@color/grey_palabras"
+            android:textSize="12sp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="333dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="70dp"
             android:orientation="horizontal">
@@ -140,15 +144,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="eres un robot."
-                android:textColor="@color/white" />
+                android:textColor="@color/grey_palabras"
+                android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
+                android:id="@+id/informacion"
+                android:layout_width="172dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Más información                     "
-                android:textColor="@color/purple_700" />
+                android:textColor="@color/blue"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <ProgressBar
@@ -164,7 +170,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="¿Preguntas? Llama al 900-759-106"
-            android:textColor="@color/white" />
+            android:textColor="@color/grey_palabras" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -178,7 +184,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Preguntas frecuentes"
-                android:textColor="@color/white"
+                android:textColor="@color/grey_palabras"
                 android:textSize="12sp" />
 
             <TextView
@@ -187,7 +193,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Centro de ayuda"
-                android:textColor="@color/white"
+                android:textColor="@color/grey_palabras"
                 android:textSize="12sp" />
 
         </LinearLayout>
@@ -206,7 +212,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Términos de uso"
-                android:textColor="@color/white"
+                android:textColor="@color/grey_palabras"
                 android:textSize="12sp" />
 
             <TextView
@@ -215,7 +221,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Privacidad"
-                android:textColor="@color/white"
+                android:textColor="@color/grey_palabras"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -230,7 +236,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Preferencias de cookies"
-                android:textColor="@color/white"
+                android:textColor="@color/grey_palabras"
                 android:textSize="12sp" />
 
             <TextView
@@ -239,7 +245,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Información corporativa"
-                android:textColor="@color/white"
+                android:textColor="@color/grey_palabras"
                 android:textSize="12sp" />
         </LinearLayout>
 
