--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="grey">#333</color>
     <color name="grey_palabras">#6e706e</color>
     <color name="blue">#026efa</color>
+    <color name="orange">#E67E22</color>
+
 </resources>
